src/flex/Moon.bnf
{
    parserClass = "com.github.moonbit.parser.MoonParser"
    parserUtilClass = "com.github.moonbit.psi.MoonParserExtension"

    extends = "com.github.moonbit.psi.AnyMoonNode"

    psiClassPrefix = "Moon"
    psiImplClassSuffix = "Node"
    psiPackage = "com.github.moonbit.psi"
    psiImplPackage = "com.github.moonbit.psi_node"

    elementTypeHolderClass = "com.github.moonbit.psi.MoonTypes"
    elementTypeClass = "com.github.moonbit.psi.MoonElementType"
    tokenTypeClass = "com.github.moonbit.psi.MoonTokenType"

    psiImplUtilClass = "com.github.moonbit.psi_node.MoonPsiExtension"

    tokens = [
        // comment
        COMMENT_DOCUMENT = "Comment Document"
        COMMENT = "Comment"
        COMMENT_BLOCK = "Comment Block"

        // literal
        URL = "Url"
        SYMBOL    = "Symbol"
        REFERENCE = "$Symbol"
        STRING_QUOTE = "String Quote"
        STRING_CHAR = "String Character"
        STRING_ESCAPE = "String Escaped"
        SELECTION_LINE = "SELECTION_LINE"

		KW_PACKAGE     = "package"
		KW_WORLD       = "world"
		KW_INTERFACE   = "interface"
		KW_INCLUDE     = "include"
		KW_EXPORT      = "export"
		KW_IMPORT      = "import"
		KW_USE         = "use"
		KW_AS          = "as"
		KW_TYPE        = "type"
		KW_RESOURCE    = "resource"
		KW_RECORD      = "record"
		KW_ENUM        = "enum"
		KW_FLAGS       = "flags"
		KW_VARIANT     = "variant"
		KW_FUNCTION    = "func"
		KW_CONSTRUCTOR = "constructor"

		VERSION = "<<semver>>"
        PARENTHESIS_L = '('
        PARENTHESIS_R = ')'
        BRACKET_L = '['
        BRACKET_R = ']'
        BRACE_L = '{'
        BRACE_R = '}'
        ANGLE_L = '<'
        ANGLE_R = '>'
        ACCENT = '^'
        EQ = '='
        COLON = ':'
        SEMICOLON = ';'
        COMMA = ','
        DOLLAR = '$'
        DOT = '.'
        STAR = '*'
        AT = '@'
        TO = "->"
        HYPHEN = "-"
        SLASH = '/'
        PLACE_HOLDER = "_"
//      SPACE='regexp:\s+'
//      ANY = 'regexp:.'

    ]
}

// https://github.com/bytecodealliance/fluent/blob/master/spec/fluent.ebnf
moon ::= statements*
private statements ::= SEMICOLON
    | package
	| declare-struct
	| declare-trait
	| let-statement
	| declare-function
	| test-statement
	| while-statement
	| if-statement

// package wasi:blobstore@0.2.0-draft;
package ::= KW_PACKAGE package-name {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinPackage"
}

package-name ::= module-name (COLON module-name)* package-version?;
package-version ::= AT VERSION;
// world name { }
let-statement ::= modifier? KW_LET identifier (COLON type-expression)? EQ term-expression {
	pin = 2
//    mixin = "com.github.bytecodealliance.language.mixin.MixinWorld"
}
private world-element ::= SEMICOLON
	| include
	| import
	| export
	| while-statement
	| define-type
	| enum
	| variant
	| COMMENT_LINE
// include wasi:keyvalue/imports@0.2.0-draft;
include ::= KW_INCLUDE include-name {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinInclude"
}
include-name ::=
    identifier (COLON identifier) (SLASH interface-name) package-version?
  | interface-name
// import imports;
// import error-code: func(err: u32) -> option<u32>;
// export imports;
// export my:dep/a@0.2.0;
import    ::= KW_IMPORT export-term {
	pin = 1
}
export    ::= KW_EXPORT export-term {
	pin = 1
}
export-term ::= function
	| test-statement
	| include-name
//  use wasi:poll/poll.{pollable};
//  use wasi:io/streams@0.2.0.{input-stream, output-stream};
while-statement ::= KW_WHILE term-expression function-body {
	pin = 1
}
if-statement ::= KW_IF term-expression function-body else-statement? {
	pin = 1
}
else-statement ::= KW_ELSE function-body {
	pin = 1
}
// interface name { }
declare-function ::= modifier* KW_FN identifier declare-generic? declare-parameter function-body {
	pin = 2
//    mixin = "com.github.bytecodealliance.language.mixin.MixinInterface"
}
function-body  ::= BRACE_L function-element* BRACE_R;
function-element ::= SEMICOLON
	| let-statement
	| declare-function
	| test-statement
	| while-statement
	| if-statement

declare-parameter ::= PARENTHESIS_L identifier COLON identifier PARENTHESIS_R


declare-generic ::= BRACKET_L identifier BRACKET_R;


modifier ::= KW_PUBLIC | KW_PRIVATE;

// exports: interface
test-statement ::= KW_TEST string-literal function-body {
	pin = 1
//	extends = interface
//	mixin = "com.github.bytecodealliance.language.mixin.MixinInterface"
}


// exports: interface


// =====================================================================================================================
term-expression ::= term-expression-item (term-infix term-expression-item)*;
term-expression-item ::= term-prefix* term-expression-atom term-suffix*;
term-expression-atom ::= PARENTHESIS_L term-expression PARENTHESIS_R
	| identifier
	| string-literal
	| number-literal

term-prefix ::= OP_ADD;
term-infix  ::= OP_ADD | OP_ADD_ASSIGN;
term-suffix ::= "?"
// =====================================================================================================================
type-expression ::= type-expression-item (type-infix type-expression-item)*;
type-expression-item ::= type-prefix* type-expression-atom type-suffix*;
type-expression-atom ::= PARENTHESIS_L type-expression PARENTHESIS_R
	| identifier
//	| string-literal
//	| number-literal
type-prefix ::= OP_ADD;
type-infix  ::= OP_ADD | OP_ADD_ASSIGN;
type-suffix ::= "?"
// =====================================================================================================================
string-literal ::= BRACE_L interface-element* BRACE_R;

number-literal ::= INTEGER;


private interface-element ::= SEMICOLON
	| while-statement
	| define-type
	| declare-trait
	| declare-struct
	| flags
	| enum
	| variant
	| function

constructor ::= KW_CONSTRUCTOR tuple (TO type-hint)? {
	pin = 1
}
function ::= identifier COLON function-signature {
//	mixin = "com.github.bytecodealliance.language.mixin.MixinFunction"
}
function-signature ::= modifier? KW_FUNCTION tuple (TO type-hint)? {
	pin = 2
}

// type type-name = type-hint;
define-type ::= KW_TYPE identifier EQ type-hint {
	pin = 1
}
type-hint ::= tuple | type-generic;
type-generic ::= identifier generic?;
tuple ::= PARENTHESIS_L (parameter (COMMA parameter)* COMMA?)? PARENTHESIS_R;
parameter ::= identifier COLON type-hint {

}
generic   ::= ANGLE_L (type-hint (COMMA type-hint)* COMMA?)? ANGLE_R;
// resource type-name { method: func() };
declare-trait  ::= KW_RESOURCE identifier trait-body {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinResource"
}
trait-body ::= BRACE_L trait-element* BRACE_R;
private trait-element ::=
	declare-function


// record type-name { field: type-hint, key: value };
declare-struct   ::= KW_RECORD identifier BRACE_L struct-element* BRACE_R {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinRecord"
}
private struct-element ::= COMMA
	| declare-field
	| declare-method
declare-field    ::= identifier COLON type-hint {
//    mixin = "com.github.bytecodealliance.language.mixin.MixinField"
}
declare-method ::= identifier COLON function-signature {
//	mixin = "com.github.bytecodealliance.language.mixin.MixinMethod"
}






private resource-element ::=
    declare-method
  | constructor
  | SEMICOLON




flags       ::= KW_FLAGS identifier BRACE_L (semantic-number (COMMA semantic-number)* COMMA?)? BRACE_R {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinFlags"
}
enum       ::= KW_ENUM identifier BRACE_L (semantic-number (COMMA semantic-number)* COMMA?)? BRACE_R {
	pin = 1
}


variant          ::= KW_VARIANT identifier BRACE_L (variant-item (COMMA variant-item)* COMMA?)? BRACE_R {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinVariant"
}
variant-item 	 ::= identifier (PARENTHESIS_L type-hint PARENTHESIS_R)? {
//    mixin = "com.github.bytecodealliance.language.mixin.MixinVariantItem"
}


/* Literals */

/* Identifier */
module-name         ::= SYMBOL | ESCAPED;
semantic-number     ::= SYMBOL | ESCAPED;
identifier          ::= SYMBOL | ESCAPED;
