src/main/gen/com/github/moonbit/parser/MoonParser.java
// This is a generated file. Not intended for manual editing.
package com.github.moonbit.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.moonbit.psi.MoonTypes.*;
import static com.github.moonbit.psi.MoonParserExtension.*;

import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MoonParser implements PsiParser, LightPsiParser {

    public ASTNode parse(IElementType t, PsiBuilder b) {
        parseLight(t, b);
        return b.getTreeBuilt();
    }

    public void parseLight(IElementType t, PsiBuilder b) {
        boolean r;
        b = adapt_builder_(t, b, this, null);
        Marker m = enter_section_(b, 0, _COLLAPSE_, null);
        r = parse_root_(t, b);
        exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType t, PsiBuilder b) {
        return parse_root_(t, b, 0);
    }

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        return moon(b, l + 1);
    }

    /* ********************************************************** */
    // DOT identifier
    public static boolean call_field(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_field")) return false;
        if (!nextTokenIs(b, DOT)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, DOT);
        r = r && identifier(b, l + 1);
        exit_section_(b, m, CALL_FIELD, r);
        return r;
    }

    /* ********************************************************** */
    // PARENTHESIS_L term-expression (COMMA term-expression)* PARENTHESIS_R
    public static boolean call_function(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function")) return false;
        if (!nextTokenIs(b, PARENTHESIS_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PARENTHESIS_L);
        r = r && term_expression(b, l + 1);
        r = r && call_function_2(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        exit_section_(b, m, CALL_FUNCTION, r);
        return r;
    }

    // (COMMA term-expression)*
    private static boolean call_function_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_2")) return false;
        while (true) {
            int c = current_position_(b);
            if (!call_function_2_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "call_function_2", c)) break;
        }
        return true;
    }

    // COMMA term-expression
    private static boolean call_function_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && term_expression(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // BRACKET_L term-expression (COMMA term-expression)* BRACKET_R
    public static boolean call_index(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_index")) return false;
        if (!nextTokenIs(b, BRACKET_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACKET_L);
        r = r && term_expression(b, l + 1);
        r = r && call_index_2(b, l + 1);
        r = r && consumeToken(b, BRACKET_R);
        exit_section_(b, m, CALL_INDEX, r);
        return r;
    }

    // (COMMA term-expression)*
    private static boolean call_index_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_index_2")) return false;
        while (true) {
            int c = current_position_(b);
            if (!call_index_2_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "call_index_2", c)) break;
        }
        return true;
    }

    // COMMA term-expression
    private static boolean call_index_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_index_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && term_expression(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // DOT call-function
    public static boolean call_method(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_method")) return false;
        if (!nextTokenIs(b, DOT)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, DOT);
        r = r && call_function(b, l + 1);
        exit_section_(b, m, CALL_METHOD, r);
        return r;
    }

    /* ********************************************************** */
    // KW_CONSTRUCTOR tuple (TO type-hint)?
    public static boolean constructor(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constructor")) return false;
        if (!nextTokenIs(b, KW_CONSTRUCTOR)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, CONSTRUCTOR, null);
        r = consumeToken(b, KW_CONSTRUCTOR);
        p = r; // pin = 1
        r = r && report_error_(b, tuple(b, l + 1));
        r = p && constructor_2(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // (TO type-hint)?
    private static boolean constructor_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constructor_2")) return false;
        constructor_2_0(b, l + 1);
        return true;
    }

    // TO type-hint
    private static boolean constructor_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constructor_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TO);
        r = r && type_hint(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // KW_BREAK term-expression
    public static boolean control_break(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_break")) return false;
        if (!nextTokenIs(b, KW_BREAK)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_BREAK);
        r = r && term_expression(b, l + 1);
        exit_section_(b, m, CONTROL_BREAK, r);
        return r;
    }

    /* ********************************************************** */
    // KW_FN declare-parameter function-body
    public static boolean declare_closure(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_closure")) return false;
        if (!nextTokenIs(b, KW_FN)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_CLOSURE, null);
        r = consumeToken(b, KW_FN);
        p = r; // pin = 1
        r = r && report_error_(b, declare_parameter(b, l + 1));
        r = p && function_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // KW_ENUM identifier enum-body derive-statement?
    public static boolean declare_enum(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_enum")) return false;
        if (!nextTokenIs(b, KW_ENUM)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_ENUM, null);
        r = consumeToken(b, KW_ENUM);
        p = r; // pin = 1
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && report_error_(b, enum_body(b, l + 1)) && r;
        r = p && declare_enum_3(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // derive-statement?
    private static boolean declare_enum_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_enum_3")) return false;
        derive_statement(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // identifier COLON type-hint {
    // //    mixin = "com.github.bytecodealliance.language.mixin.MixinField"
    // }
    public static boolean declare_field(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_field")) return false;
        if (!nextTokenIs(b, "<declare field>", ESCAPED, SYMBOL)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_FIELD, "<declare field>");
        r = identifier(b, l + 1);
        r = r && consumeToken(b, COLON);
        r = r && type_hint(b, l + 1);
        r = r && declare_field_3(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // {
    // //    mixin = "com.github.bytecodealliance.language.mixin.MixinField"
    // }
    private static boolean declare_field_3(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // modifier* KW_FN identifier declare-generic? declare-parameter function-body
    public static boolean declare_function(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_function")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_FUNCTION, "<declare function>");
        r = declare_function_0(b, l + 1);
        r = r && consumeToken(b, KW_FN);
        r = r && identifier(b, l + 1);
        p = r; // pin = 3
        r = r && report_error_(b, declare_function_3(b, l + 1));
        r = p && report_error_(b, declare_parameter(b, l + 1)) && r;
        r = p && function_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // modifier*
    private static boolean declare_function_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_function_0")) return false;
        while (true) {
            int c = current_position_(b);
            if (!modifier(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "declare_function_0", c)) break;
        }
        return true;
    }

    // declare-generic?
    private static boolean declare_function_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_function_3")) return false;
        declare_generic(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // BRACKET_L (generic-item (COMMA generic-item)*)? BRACKET_R
    public static boolean declare_generic(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_generic")) return false;
        if (!nextTokenIs(b, BRACKET_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACKET_L);
        r = r && declare_generic_1(b, l + 1);
        r = r && consumeToken(b, BRACKET_R);
        exit_section_(b, m, DECLARE_GENERIC, r);
        return r;
    }

    // (generic-item (COMMA generic-item)*)?
    private static boolean declare_generic_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_generic_1")) return false;
        declare_generic_1_0(b, l + 1);
        return true;
    }

    // generic-item (COMMA generic-item)*
    private static boolean declare_generic_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_generic_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = generic_item(b, l + 1);
        r = r && declare_generic_1_0_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (COMMA generic-item)*
    private static boolean declare_generic_1_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_generic_1_0_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!declare_generic_1_0_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "declare_generic_1_0_1", c)) break;
        }
        return true;
    }

    // COMMA generic-item
    private static boolean declare_generic_1_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_generic_1_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && generic_item(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // identifier COLON function-signature {
    // //	mixin = "com.github.bytecodealliance.language.mixin.MixinMethod"
    // }
    public static boolean declare_method(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_method")) return false;
        if (!nextTokenIs(b, "<declare method>", ESCAPED, SYMBOL)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_METHOD, "<declare method>");
        r = identifier(b, l + 1);
        r = r && consumeToken(b, COLON);
        r = r && function_signature(b, l + 1);
        r = r && declare_method_3(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // {
    // //	mixin = "com.github.bytecodealliance.language.mixin.MixinMethod"
    // }
    private static boolean declare_method_3(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // PARENTHESIS_L identifier COLON identifier PARENTHESIS_R
    public static boolean declare_parameter(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_parameter")) return false;
        if (!nextTokenIs(b, PARENTHESIS_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PARENTHESIS_L);
        r = r && identifier(b, l + 1);
        r = r && consumeToken(b, COLON);
        r = r && identifier(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        exit_section_(b, m, DECLARE_PARAMETER, r);
        return r;
    }

    /* ********************************************************** */
    // KW_STRUCT identifier struct-body derive-statement?
    public static boolean declare_struct(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_struct")) return false;
        if (!nextTokenIs(b, KW_STRUCT)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_STRUCT, null);
        r = consumeToken(b, KW_STRUCT);
        p = r; // pin = 1
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && report_error_(b, struct_body(b, l + 1)) && r;
        r = p && declare_struct_3(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // derive-statement?
    private static boolean declare_struct_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_struct_3")) return false;
        derive_statement(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // KW_TEST string-literal function-body
    public static boolean declare_test(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_test")) return false;
        if (!nextTokenIs(b, KW_TEST)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_TEST, null);
        r = consumeToken(b, KW_TEST);
        p = r; // pin = 1
        r = r && report_error_(b, string_literal(b, l + 1));
        r = p && function_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // KW_TRAIT identifier trait-body
    public static boolean declare_trait(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_trait")) return false;
        if (!nextTokenIs(b, KW_TRAIT)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_TRAIT, null);
        r = consumeToken(b, KW_TRAIT);
        p = r; // pin = 1
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && trait_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // KW_TYPE identifier EQ type-hint
    public static boolean define_type(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "define_type")) return false;
        if (!nextTokenIs(b, KW_TYPE)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DEFINE_TYPE, null);
        r = consumeToken(b, KW_TYPE);
        p = r; // pin = 1
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && report_error_(b, consumeToken(b, EQ)) && r;
        r = p && type_hint(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // KW_DERIVE PARENTHESIS_L (identifier (COMMA identifier)*)? PARENTHESIS_R {
    // 	//	mixin = "com.github.bytecodealliance.language.mixin.MixinDerive"
    // }
    public static boolean derive_statement(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "derive_statement")) return false;
        if (!nextTokenIs(b, KW_DERIVE)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, KW_DERIVE, PARENTHESIS_L);
        r = r && derive_statement_2(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        r = r && derive_statement_4(b, l + 1);
        exit_section_(b, m, DERIVE_STATEMENT, r);
        return r;
    }

    // (identifier (COMMA identifier)*)?
    private static boolean derive_statement_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "derive_statement_2")) return false;
        derive_statement_2_0(b, l + 1);
        return true;
    }

    // identifier (COMMA identifier)*
    private static boolean derive_statement_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "derive_statement_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = identifier(b, l + 1);
        r = r && derive_statement_2_0_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (COMMA identifier)*
    private static boolean derive_statement_2_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "derive_statement_2_0_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!derive_statement_2_0_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "derive_statement_2_0_1", c)) break;
        }
        return true;
    }

    // COMMA identifier
    private static boolean derive_statement_2_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "derive_statement_2_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && identifier(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // {
    // 	//	mixin = "com.github.bytecodealliance.language.mixin.MixinDerive"
    // }
    private static boolean derive_statement_4(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // KW_ELSE function-body
    public static boolean else_statement(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "else_statement")) return false;
        if (!nextTokenIs(b, KW_ELSE)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, ELSE_STATEMENT, null);
        r = consumeToken(b, KW_ELSE);
        p = r; // pin = 1
        r = r && function_body(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // BRACE_L enum-element* BRACE_R
    public static boolean enum_body(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "enum_body")) return false;
        if (!nextTokenIs(b, BRACE_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACE_L);
        r = r && enum_body_1(b, l + 1);
        r = r && consumeToken(b, BRACE_R);
        exit_section_(b, m, ENUM_BODY, r);
        return r;
    }

    // enum-element*
    private static boolean enum_body_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "enum_body_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!enum_element(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "enum_body_1", c)) break;
        }
        return true;
    }

    /* ********************************************************** */
    // SEMICOLON
    // 	| declare-variant
    // 	| declare-field
    // 	| declare-method
    static boolean enum_element(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "enum_element")) return false;
        boolean r;
        r = consumeToken(b, SEMICOLON);
        if (!r) r = consumeToken(b, DECLARE_VARIANT);
        if (!r) r = declare_field(b, l + 1);
        if (!r) r = declare_method(b, l + 1);
        return r;
    }

    /* ********************************************************** */
    // KW_EXPORT export-term
    public static boolean export(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "export")) return false;
        if (!nextTokenIs(b, KW_EXPORT)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, EXPORT, null);
        r = consumeToken(b, KW_EXPORT);
        p = r; // pin = 1
        r = r && export_term(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // function
    // 	| declare-test
    // 	| include-name
    public static boolean export_term(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "export_term")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, EXPORT_TERM, "<export term>");
        r = function(b, l + 1);
        if (!r) r = declare_test(b, l + 1);
        if (!r) r = include_name(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // KW_FLAGS identifier BRACE_L (semantic-number (COMMA semantic-number)* COMMA?)? BRACE_R
    public static boolean flags(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "flags")) return false;
        if (!nextTokenIs(b, KW_FLAGS)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, FLAGS, null);
        r = consumeToken(b, KW_FLAGS);
        p = r; // pin = 1
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && report_error_(b, consumeToken(b, BRACE_L)) && r;
        r = p && report_error_(b, flags_3(b, l + 1)) && r;
        r = p && consumeToken(b, BRACE_R) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // (semantic-number (COMMA semantic-number)* COMMA?)?
    private static boolean flags_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "flags_3")) return false;
        flags_3_0(b, l + 1);
        return true;
    }

    // semantic-number (COMMA semantic-number)* COMMA?
    private static boolean flags_3_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "flags_3_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = semantic_number(b, l + 1);
        r = r && flags_3_0_1(b, l + 1);
        r = r && flags_3_0_2(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (COMMA semantic-number)*
    private static boolean flags_3_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "flags_3_0_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!flags_3_0_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "flags_3_0_1", c)) break;
        }
        return true;
    }

    // COMMA semantic-number
    private static boolean flags_3_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "flags_3_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && semantic_number(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // COMMA?
    private static boolean flags_3_0_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "flags_3_0_2")) return false;
        consumeToken(b, COMMA);
        return true;
    }

    /* ********************************************************** */
    // term-expression COLON
    public static boolean for_condition(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "for_condition")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, FOR_CONDITION, "<for condition>");
        r = term_expression(b, l + 1);
        r = r && consumeToken(b, COLON);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // term-expression
    public static boolean for_increment(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "for_increment")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, FOR_INCREMENT, "<for increment>");
        r = term_expression(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // term-expression COLON
    public static boolean for_startup(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "for_startup")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, FOR_STARTUP, "<for startup>");
        r = term_expression(b, l + 1);
        r = r && consumeToken(b, COLON);
        exit_section_(b, l, m, r, false, null);
        return r;
    }
